test/spec_vectors/local_set/fail/module_28.wat
(module (func $unbound-local (local i32 i64) (local.set 3 (i32.const 0))))